--- a/python_eksamen_qrapp/templates/python_eksamen_qrapp/index.html
+++ b/python_eksamen_qrapp/templates/python_eksamen_qrapp/index.html
@@ -43,58 +43,24 @@
 <main role="main" class="container">
 
   <div class="starter-template" style="padding:70px">
-    <h1>Bootstrap starter template</h1>
-    <p class="lead">Use this document as a way to quickly start any new project.<br> All you get is this text and a mostly barebones HTML document.</p>
-    <form>
-    Input field<br>
-    <input type="url" name="inputfield" value="qrcode"><br>
-        <input type="submit" value="Submit">
+    
+    <form action"/index" method="post">{% csrf_token %}
+        Input field<br>
+        <label for="this_url">This url: </label>
+        <input id="this_url" type="text" name="this_url" required>
+        <input type="submit" value="OK">
+        <p>{{</p>
     </form>
 
 
 <body>
 {% block content %}
-
     <table width="100%">
-        <tr>
-            <td width="33%">
-                <h3>A medium "hello world" QR code (default size) with level H of error correction (up to 30% damage)</h3>
-            </td>
-            <td width="33%">
-                <h3>A large "hello world" QR code with level L of error correction (up to 7% damage)</h3>
-            </td>
-            <td width="33%">
-                <h3>A huge "hello world" QR code with level M of error correction (default level, up to 15% damage)</h3>
-            </td>
-        </tr>
-        <tr>
-            <td>Template code:</td>
-        </tr>
-        <tr>
-            <td width="33%">
-                <strong><code>{% templatetag openblock %} qr_from_text "Hello World!" size="M" error_correction="H" {% templatetag closeblock %}</code></strong>
-            </td>
-            <td width="33%">
-                <strong><code>{% templatetag openblock %} qr_from_text "Hello World!" size="L" error_correction="L" {% templatetag closeblock %}</code></strong>
-            </td>
-            <td width="33%">
-                <strong><code>{% templatetag openblock %} qr_from_text "Hello World!" size="H" error_correction="M" {% templatetag closeblock %}</code></strong>
-            </td>
-        </tr>
         <tr>
             <td width="33%">
                 <div>{% qr_from_text "Hello World!" size="M" error_correction="H" %}</div>
             </td>
-            <td width="33%">
-                <div>{% qr_from_text "" size="L" error_correction="L" %}</div>
-            </td>
-            <td width="33%">
-                <div>{% qr_from_text "Hello World!" size="H" error_correction="M" %}</div>
-            </td>
         </tr>
-
-        <tr><td><br><br></td></tr>
-        
     </table>
 
 {% endblock %}
