--- a/python_eksamen_qrapp/templates/python_eksamen_qrapp/index.html
+++ b/python_eksamen_qrapp/templates/python_eksamen_qrapp/index.html
@@ -1,14 +1,32 @@
- <!DOCTYPE html>
-{% load qr_code %}
-<html lang="en"> 
-  
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    
-    <link href="style.css" rel="stylesheet">
-  </head>
-  <body>
-    <nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top">
-  <a class="navbar-brand" href="#">QR Generator</a>
+<!--
+<main role="main" class="container">
+
+  <div class="starter-template">
+    <br>
+    <br>
+    <br>
+    <form action="{% url 'polls:index'%}" method="post">
+        {% csrf_token %}
+        <label for="url">Enter Url for QR Code: </label>
+        <input id="url" type="text" name="url"> {{url}}
+        <input type="submit" value="OK">
+    </form>
+
+</main>
+-->
+<form action="." method="post" enctype="application/x-www-form-urlencoded">{% csrf_token %}
+    {{ name_form.name.label_tag }}
+    {{ name_form.name }}
+    {{ name_form.name.errors }}
+    <button type="submit">Submit</button>
+</form>
+{{ name_form.name }}
+<!--
+
+<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+
+<nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top">
+  <a class="navbar-brand" href="#">Navbar</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
@@ -18,56 +36,36 @@
       <li class="nav-item active">
         <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
       </li>
-      <!--<li class="nav-item">
+      <li class="nav-item">
         <a class="nav-link" href="#">Link</a>
       </li>
       <li class="nav-item">
         <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
-      </li>-->
+      </li>
       <li class="nav-item dropdown">
         <a class="nav-link dropdown-toggle" href="#" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Dropdown</a>
         <div class="dropdown-menu" aria-labelledby="dropdown01">
-          <a class="dropdown-item" href="#">Create VRCard</a>
-          <a class="dropdown-item" href="#">Create Web Link</a>
-          <a class="dropdown-item" href="#">web store</a>
+          <a class="dropdown-item" href="#">Action</a>
+          <a class="dropdown-item" href="#">Another action</a>
+          <a class="dropdown-item" href="#">Something else here</a>
         </div>
       </li>
     </ul>
-    <form class="form-inline my-2 my-lg-0">
-      <input class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search">
-      <button class="btn btn-secondary my-2 my-sm-0" type="submit">Search</button>
-    </form>
   </div>
 </nav>
 
 <main role="main" class="container">
 
-  <div class="starter-template" style="padding:70px">
-    
-    <form action"/index" method="post">{% csrf_token %}
-        Input field<br>
-        <label for="this_url">This url: </label>
-        <input id="this_url" type="text" name="this_url" required>
+  <div class="starter-template">
+    <br>
+    <br>
+    <br>
+    <form action="{% url 'polls:index'%}" method="post">
+        {% csrf_token %}
+        <label for="url">Enter Url for QR Code: </label>
+        <input id="url" type="text" name="url">
         <input type="submit" value="OK">
-        <p>{{</p>
     </form>
 
-
-<body>
-{% block content %}
-    <table width="100%">
-        <tr>
-            <td width="33%">
-                <div>{% qr_from_text "Hello World!" size="M" error_correction="H" %}</div>
-            </td>
-        </tr>
-    </table>
-
-{% endblock %}
-</body>
-</html>
-</main><!-- /.container -->
-<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-
+</main> /.container
+-->
